# actors-interop

./: .gitignore  ARCHITECTURE.md  Makefile  README.md
codegen/: generate.py
cpp/src/: RustActorRef.cpp
examples/: README.md
examples/ping_pong/: Makefile  README.md  main.cpp  rust_pong.rs
examples/pubsub/: Makefile  README.md  main.cpp  rust_publisher.rs
examples/rust_ping_cpp_pong/: Makefile  README.md  main.cpp  rust_ping.rs
examples/rust_subscribes_cpp_publisher/: Makefile  README.md  cpp_publisher.cpp  main.cpp  rust_subscriber.rs
messages/: interop_messages.h
rust/: Cargo.toml
rust/src/: lib.rs  rust_manager_ffi.rs
tests/: test_ffi.cpp
